--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -2,7 +2,7 @@
     /* ESPAÇAMENTOS */
     --espaco-interno-botao: 8px;
     --espaco-entre-elementos-do-botao: 8px;
-    --espaco-entre-elementos: 16px/8px;
+    --espaco-entre-elementos: 8px 16px;
     --espacamento-interno-do-corpo: 16px;
     --espacamento-título-do-cartao-recentes-e-seus-itens: 24px;
 
