--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -5,6 +5,7 @@
     --espaco-entre-elementos: 8px 16px;
     --espacamento-interno-do-corpo: 16px;
     --espacamento-título-do-cartao-recentes-e-seus-itens: 24px;
+    --tamanho-icones: 24px;
 
     /* TAMANHOS */
     --mobile: 360px;
