--- a/assets/css/variaveis.css
+++ b/assets/css/variaveis.css
@@ -25,6 +25,7 @@
     --links: #0480DC;
     --botao: #0480DC;
     --sombras: 0px 4px 4px rgba(0, 0, 0, 0.16);
+    --branco: rgb(255, 255, 255);
 }
 
 
