--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -94,3 +94,68 @@ body{
 .menu-lateral__link--pinturas::before{
     content: "\e90a";
 }
+
+.principal{
+    padding: 24px;
+}
+.titulo-pagina{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.cartao{
+    width: 100%;
+    border-radius: 15px;
+    /* Qualquer coisa que ultrapasse os limites da borda, esconda */
+    overflow: hidden;
+    background-color: var(--cartao);
+}
+.cartao__conteudo{
+    padding: 16px;
+}
+.cartao__titulo{
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.cartao__perfil{
+    color: var(--fonte-alternativa);
+    font-size: 0.9rem;
+}
+.cartao__info{
+    display: flex;
+    align-items: center;
+    color: var(--fonte-alternativa);
+}
+.cartao__info--tempo{
+    content: "\e90c";
+    margin-right: 8px;
+}
+.cartao__info--visualizacao{
+    content: "\e90f";
+    margin-right: 8px;
+}
+.cartao__botao{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--botao);
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 0.9rem;
+}
+.cartao__botao--play::before{
+    content: "\e90b";
+    font-size: 24px;
+}
+.cartao__botao--destaque{
+    width: 100%;
+}
+.cartao__botao--destaque::before{
+    margin-right: 8px;
+}
+
+.cartao__conteudo{
+    padding: 16px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
