--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -2,14 +2,13 @@
     font-family: 'icones';
     src: url(../font/icones.ttf);
 }
-html{
-    font-size: 62.5%;
-}
 body{
     background-color: var(--corpo);
     font-family: 'Open Sans' , 'icones', sans-serif;
     color: white;
 }
+
+
 
 .cabecalho{
     display: flex;
@@ -19,17 +18,21 @@ body{
     padding: var(--espaco-entre-elementos);
     box-shadow: var(--sombras);
 }
+
 .cabecalho__menu i::before{
     content: "\e904";
     font-size: var(--tamanho-icones);
 }
+
 .cabecalho__notificacao i::before{
     content: "\e906";
     font-size: var(--tamanho-icones);
 }
+
 .cabecalho__logo{
     width: 40px;
 }
+
 
 .menu-lateral{
     display: flex;
@@ -62,6 +65,7 @@ body{
     display: flex;
     align-items: center;
 }
+
 .menu-lateral__link::before{
     content: "";
     width: 24px;
@@ -70,6 +74,7 @@ body{
     position: absolute;
     left: 24px;
 }
+
 .menu-lateral__link--ativo{
     color: var(--branco);
     padding-left: 56px;
@@ -95,13 +100,24 @@ body{
     content: "\e90a";
 }
 
+
+
 .principal{
-    padding: 24px;
+    padding: 24px 16px;
+    display: grid;
+    gap: 16px;
 }
+
 .titulo-pagina{
     font-size: 1.5rem;
     font-weight: 700;
 }
+
+.titulo-secao{
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
 .cartao{
     width: 100%;
     border-radius: 15px;
@@ -109,30 +125,50 @@ body{
     overflow: hidden;
     background-color: var(--cartao);
 }
+
+.cartao--destaque{
+    margin-bottom: 16px;
+}
+
 .cartao__conteudo{
     padding: 16px;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 8px;
 }
+
+.cartao__destaque{
+    grid-column: span 2;
+}
+
 .cartao__titulo{
     font-size: 1.2rem;
     font-weight: 700;
+    grid-column: span 2;
 }
+
 .cartao__perfil{
     color: var(--fonte-alternativa);
     font-size: 0.9rem;
+    grid-column: span 2;
 }
+
 .cartao__info{
     display: flex;
     align-items: center;
     color: var(--fonte-alternativa);
 }
-.cartao__info--tempo{
+
+.cartao__info--tempo::before{
     content: "\e90c";
     margin-right: 8px;
 }
-.cartao__info--visualizacao{
+
+.cartao__info--vizualizacao::before{
     content: "\e90f";
     margin-right: 8px;
 }
+
 .cartao__botao{
     display: flex;
     justify-content: center;
@@ -142,20 +178,27 @@ body{
     height: 40px;
     border-radius: 10px;
     font-size: 0.9rem;
+    justify-self: flex-end;
 }
+
 .cartao__botao--play::before{
     content: "\e90b";
     font-size: 24px;
 }
+
 .cartao__botao--destaque{
     width: 100%;
+    grid-column: span 2;
 }
+
 .cartao__botao--destaque::before{
     margin-right: 8px;
 }
 
-.cartao__conteudo{
-    padding: 16px;
+
+.secao{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    gap: 16px;
 }
+
+.
