--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -183,7 +183,6 @@ body{
 .titulo-pagina{
     font-size: 1.5rem;
     font-weight: 700;
-    grid-area: titulo-pagina;
 }
 
 .titulo-secao{
@@ -206,6 +205,11 @@ body{
         padding: 16px 60px;
         grid-column: 2;
     }
+
+    .titulo-secao{
+        grid-column: span 4;
+    }
+
 }
 
 
@@ -216,6 +220,10 @@ body{
     /* Qualquer coisa que ultrapasse os limites da borda, esconda */
     overflow: hidden;
     background-color: var(--cartao);
+}
+
+.cartao__imagem--desktop{
+    display: none;
 }
 
 .cartao--destaque{
@@ -292,6 +300,23 @@ body{
 }
 
 @media screen and (min-width: 1440px) {
+    .cartao--destaque{
+        margin-bottom: 0;
+    }
+
+    .cartao__imagem--mobile{
+        display: none;
+    }
+
+    .cartao__imagem--desktop{
+        display: block;
+    }
+
+    .cartao__botao--destaque {
+        grid-column: auto;
+        padding: 16px 8px;
+    }
+
     .cartao--recentes{
         display: grid;
         grid-template-columns: auto auto;
@@ -300,6 +325,7 @@ body{
         width: var(--max-cartao-desktop);
         padding: 16px;
         box-sizing: border-box;
+        align-self: flex-start;
     }
 
     .cartao--recentes .cartao__titulo{
@@ -348,27 +374,33 @@ body{
     gap: 16px;
 }
 
+@media screen and (min-width: 1440px){
+    .secao{
+        grid-template-columns: repeat(4, 1fr);
+    }
 
-.destaque-video{
-    grid-area: destaque-video;
+    .destaque-video{
+        grid-area: destaque-video;
+    }
+    
+    .videos-recentes{
+        grid-area: videos-recentes;
+    }
+    
+    .secao-videos{
+        grid-area: secao-videos;
+    }
+    
+    .produtos-recentes{
+        grid-area: produtos-recentes;
+    }
+    
+    .destaque-produtos{
+        grid-area: destaque-produtos;
+    }
+    
+    .secao-produtos{
+        grid-area: secao-produtos;
+    }
 }
 
-.videos-recentes{
-    grid-area: videos-recentes;
-}
-
-.secao-videos{
-    grid-area: secao-videos;
-}
-
-.produtos-recentes{
-    grid-area: produtos-recentes;
-}
-
-.destaque-produtos{
-    grid-area: destaque-produtos;
-}
-
-.secao-produtos{
-    grid-area: secao-produtos;
-}
